--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   </head>
   <body>
 
-      <header>
-
+      <header class="flex-HEADER">
+        <img src="img\logo.svg" alt="logo">
+        <div class="upgradebutton">
+          EFFETTUA L'UPGRADE
+        </div>
       </header>
 
       <main>
-        <section class="leftnavbar">
-
+        <section class="leftnavbar flexNAVLEFT">
+          
         </section>
 
-        <section class="mainsection">
+        <section class="mainsection flex-container">
 
         </section>
       </main>
 
-      <footer>
+      <footer class="felx-container">
 
       </footer>
 
