left nav done (-detaails)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,47 @@
 
       <main>
         <section class="leftnavbar flexNAVLEFT">
-          
+          <div class="menu">
+            <div class="topmenu">
+              <div class="flexicon">
+                <img src="img/home.svg" alt="">
+                Home
+              </div>
+              <div class="flexicon">
+                <img src="img/search.svg" alt="">
+                Cerca
+              </div>
+              <div class="flexicon">
+                <img src="img/libreria.svg" alt="">
+                La tua libreria
+              </div>
+            </div>
+            <div class="playlistmenu">
+              <h4>PLAYLIST</h4>
+              <div class="addplaylist">
+                <img src="" alt="">
+              </div>
+              <ul>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+            </div>
+          </div>
+          <div class="profile">
+            <div class="flexicon install">
+              <img src="img/download.svg" alt="">
+              Installa app
+            </div>
+            <hr>
+            <div class="flexicon">
+              <img src="img/profile.svg" alt="">
+              John Doe
+            </div>
+          </div>
         </section>
 
         <section class="mainsection flex-container">
