leftnav now done (-details)

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             </div>
             <div class="playlistmenu">
               <h4>PLAYLIST</h4>
-              <div class="addplaylist">
-                <img src="" alt="">
+              <div class="addplaylist flexicon">
+                <div class="addsquare flexadd">
+                  +
+                </div>
+                Crea Playlist
               </div>
               <ul>
                 <li> <a href="#">Nome Playlist</a> </li>
@@ -65,7 +68,15 @@
       </main>
 
       <footer class="felx-container">
+        <div class="song">
 
+        </div>
+        <div class="player">
+
+        </div>
+        <div class="volume">
+
+        </div>
       </footer>
 
   </body>
