--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/fcf77ef8a0.js" crossorigin="anonymous"></script>
     <title></title>
   </head>
   <body>
@@ -18,27 +19,35 @@
         <section class="leftnavbar flexNAVLEFT">
           <div class="menu">
             <div class="topmenu">
-              <div class="flexicon">
-                <img src="img/home.svg" alt="">
-                Home
-              </div>
-              <div class="flexicon">
-                <img src="img/search.svg" alt="">
-                Cerca
-              </div>
-              <div class="flexicon">
-                <img src="img/libreria.svg" alt="">
-                La tua libreria
-              </div>
+              <a href="#">
+                <div class="flexicon">
+                  <img src="img/home.svg" alt="">
+                  <p>Home</p>
+                </div>
+              </a>
+              <a href="#">
+                <div class="flexicon">
+                  <img src="img/search.svg" alt="">
+                  <p>Cerca</p>
+                </div>
+              </a>
+              <a href="#">
+                <div class="flexicon">
+                  <img src="img/libreria.svg" alt="">
+                  <p>La tua libreria</p>
+                </div>
+              </a>
             </div>
             <div class="playlistmenu">
               <h4>PLAYLIST</h4>
-              <div class="addplaylist flexicon">
-                <div class="addsquare flexadd">
-                  +
+              <a id="plusicon" href="#">
+                <div class="addplaylist flexicon">
+                  <div class="addsquare flexadd">
+                    +
+                  </div>
+                  <p>Crea Playlist</p>
                 </div>
-                Crea Playlist
-              </div>
+              </a>
               <ul>
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
@@ -47,35 +56,80 @@
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
+              </ul>
             </div>
           </div>
-          <div class="profile">
+          <div class="profilezone">
             <div class="flexicon install">
               <img src="img/download.svg" alt="">
-              Installa app
+              <p>Installa app</p>
             </div>
             <hr>
-            <div class="flexicon">
+            <div class="flexicon profile">
               <img src="img/profile.svg" alt="">
-              John Doe
+              <p>John Doe</p>
             </div>
           </div>
         </section>
 
-        <section class="mainsection flex-container">
+        <section class="mainsection">
+          <div class="topnavbar">
+            <ul class="topitems">
+              <li> <a href="#">IN EVIDENZA</a> </li>
+              <li> <a href="#">PODCAST</a> </li>
+              <li> <a href="#">CLASSIFICHE</a> </li>
+              <li> <a href="#">GENERI E MOOD</a> </li>
+              <li> <a href="#">NUOVE USCITE</a> </li>
+              <li> <a href="#">SCOPRI</a> </li>
+            </ul>
+          </div>
+          <div class="recentlyplayed">
 
+          </div>
+          <div class="creatoperte">
+
+          </div>
+          <div class="artistipopolari">
+
+          </div>
         </section>
       </main>
 
-      <footer class="felx-container">
+      <footer class="flexFOOTER">
         <div class="song">
-
+          <img src="img/sinister.jpeg" alt="">
+          <div class="">
+            <p>Sinister</p>
+            <p>Brano Nome</p>
+          </div>
+          <div class="">
+            <a href="#"><i class="far fa-heart"></i></a>
+            <a href="#"><i class="far fa-folder"></i></a>
+          </div>
         </div>
         <div class="player">
+          <div class="flexbars">
+            <a href="#"><i class="fas fa-random"></i></a>
+            <a href="#"><i class="fas fa-step-backward"></i></a>
+            <a href="#"><i class="far fa-play-circle"></i></a>
+            <a href="#"><i class="fas fa-step-forward"></i></a>
+            <a href="#"><i class="fas fa-redo-alt"></i></a>
+          </div>
+          <div class="flexbars">
+            <p>0:25</p>
+            <div class="longbar">
 
+            </div>
+            <p>4:35</p>
+          </div>
         </div>
         <div class="volume">
+          <a href="#"><i class="fas fa-bars"></i></a>
+          <a href="#"><i class="fas fa-desktop"></i></a>
+          <a href="#"><i class="fas fa-volume-up"></i></a>
+          <div class="shortbar">
 
+          </div>
         </div>
       </footer>
 
