--- a/index.html
+++ b/index.html
@@ -83,14 +83,66 @@
               <li> <a href="#">SCOPRI</a> </li>
             </ul>
           </div>
+          <h2>Recently played</h2>
           <div class="recentlyplayed">
-
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
           </div>
+          <h2>Creat per John Doe</h2>
+          <p>Piu ascolti, piu accurati saranno i suggerimenti</p>
           <div class="creatoperte">
-
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
           </div>
+          <h2>Artisti piu popolari</h2>
+          <p>Piu ascolti, piu accurati saranno i suggerimenti</p>
           <div class="artistipopolari">
-
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
+            <div class="col">
+              <img src="img/metal_lifting.jpg" alt="">
+              <h4>Heavy Metal</h4>
+              <p>Subtitle</p>
+            </div>
           </div>
         </section>
       </main>
