little details center section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
           </div>
           <h2>Creat per John Doe</h2>
-          <p>Piu ascolti, piu accurati saranno i suggerimenti</p>
+          <p class="subtitle">Piu ascolti, piu accurati saranno i suggerimenti</p>
           <div class="creatoperte">
             <div class="col">
               <img src="img/metal_lifting.jpg" alt="">
@@ -131,7 +131,7 @@
             </div>
           </div>
           <h2>Artisti piu popolari</h2>
-          <p>Piu ascolti, piu accurati saranno i suggerimenti</p>
+          <p class="subtitle">Piu ascolti, piu accurati saranno i suggerimenti</p>
           <div class="artistipopolari">
             <div class="col">
               <img src="img/metal_lifting.jpg" alt="">
