--- a/index.html
+++ b/index.html
@@ -170,19 +170,22 @@
           <div class="flexbars">
             <p>0:25</p>
             <div class="longbar">
-
+              <div class="overvol"></div>
             </div>
             <p>4:35</p>
           </div>
         </div>
         <div class="volume">
-          <a href="#"><i class="fas fa-bars"></i></a>
-          <a href="#"><i class="fas fa-desktop"></i></a>
-          <a href="#"><i class="fas fa-volume-up"></i></a>
-          <div class="shortbar">
-
+          <div class="volflex">
+            <a href="#"><i class="fas fa-bars"></i></a>
+            <a href="#"><i class="fas fa-desktop"></i></a>
+            <a href="#"><i class="fas fa-volume-up"></i></a>
+              <div class="volbar">
+                <div class="overvol"></div>
+              </div>
           </div>
         </div>
+
       </footer>
 
   </body>
