scrollable playlist section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
+                <li> <a href="#">Nome Playlist</a> </li>
               </ul>
             </div>
           </div>
