--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
                 <li> <a href="#">Nome Playlist</a> </li>
-                <li> <a href="#">Nome Playlist</a> </li>
-                <li> <a href="#">Nome Playlist</a> </li>
-                <li> <a href="#">Nome Playlist</a> </li>
-                <li> <a href="#">Nome Playlist</a> </li>
               </ul>
             </div>
           </div>
@@ -72,7 +68,7 @@
             <hr>
             <div class="flexicon profile">
               <img src="img/profile.svg" alt="">
-              <p>John Doe</p>
+              <p id="user"></p>
             </div>
           </div>
         </section>
@@ -192,6 +188,6 @@
         </div>
 
       </footer>
-
+    		<script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
