modified left navbar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
       <header class="flex-HEADER">
         <img src="img\logo.svg" alt="logo">
-        <div class="upgradebutton">
-          EFFETTUA L'UPGRADE
-        </div>
+        <a href="#">
+          <div class="upgradebutton">
+            EFFETTUA L'UPGRADE
+          </div>
+        </a>
       </header>
 
       <main>
