--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/fcf77ef8a0.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>spotify</title>
   </head>
   <body>
 
